# BattleShip

./: .gitignore
BattleShip/BattleShip_ex1/: BattleShip_ex1.vcxproj  BattleShip_ex1.vcxproj.filters  main.cpp
BattleshipScripts/: AllStudents.xlsx  BoardFactory.txt  BoardFactory.xlsx  _ExtractAllProjects.bat  _Run_Ex1_Test.bat  attackAFileName.txt  attackBFileName.txt  boardFileName.txt  board_transtalor.py  cmake_authenticator.py  deleteMe.txt  excel2comments.py  excelWithMergedCells.py  excel_parser.py  extract_all_projects.py  fileNames.txt  game_results.py  generate_test_results.py  generate_test_results_ex1.py  generate_test_results_ex2.py  make_moves.py  my_utils.py  regex.txt  team.py  test.py
BattleshipScripts/Boards/2D/Good Boards/: board_2.sboard
BattleshipScripts/Boards/3D/: 3d_board_generator.py  bad_board_1.sboard  bad_board_4.sboard  good_board.sboard
BattleshipScripts/Boards/3D/Good_Generated/: 3d_board_10x10x4_0.sboard  3d_board_10x10x4_1.sboard  3d_board_10x10x4_2.sboard  (+21 more)
BattleshipScripts/Boards/Bad Boards/: bad_board_0.sboard
BattleshipScripts/Final to Moodle/: ex1_comments.xls
BattleshipScripts/ex1_tests/: Ex1 donts.docx  Ex1_dos_donts.docx  MissingFiles.txt  Results_Manual.xlsx  ex1.xls  ex1_grades.xls  ex1_grades.xlsm  ex1_raw.xls
BattleshipScripts/ex1_tests/T13_SterileGame/: clean_movesA.attack-a  clean_movesB.attack-b
BattleshipScripts/ex2_testFilesToMoodle/: readme.txt
BattleshipScripts/ex2_testFilesToMoodle/results/: Game1_MyNaive_Naive.txt
BattleshipScripts/ex2_tests/: CompilationWarnings.txt  Ex2_Code_Review.docx  First Tournament Results.txt  Game1_MyManager.txt  Game2_Naive_File.txt  Game3_Smart_Naive.txt  IssuesReport.xml  TODO.txt  ex2.xls  ex2_final_grades.xls  ex2_grades.xls  ex2_notes.txt  ex2_raw.xls
BattleshipScripts/ex3_filesToMoodle/: standings.txt
Development/BattleShip/: BattleShip.sln
Development/BattleShip/BattleShip_ex1/: BattleShip_ex1.vcxproj.filters
Development/BattleShip/ex1/: ex1.vcxproj  ex1.vcxproj.filters
Development/BattleShip/ex2/: ex2.vcxproj  ex2.vcxproj.filters
Development/BattleShip/ex2_FileAlgo/: ex2_FileAlgo.vcxproj  ex2_FileAlgo.vcxproj.filters
Development/BattleShip/ex2_NaiveAlgo/: ex2_NaiveAlgo.vcxproj  ex2_NaiveAlgo.vcxproj.filters
Development/BattleShip/ex2_SmartAlgo/: ex2_SmartAlgo.vcxproj  ex2_SmartAlgo.vcxproj.filters
Development/BattleShip/ex3/: ex3.vcxproj  ex3.vcxproj.filters
Development/BattleShip/ex3.smart/: ex3.smart.vcxproj  ex3.smart.vcxproj.filters
Development/ex1/: CMakeLists.txt  GameBoard.cpp  GameBoard.h  GameException.h  GameMaker.cpp  GameMaker.h  Player.cpp  Player.h  PrintHandler.cpp  PrintHandler.h  main.cpp
Development/ex2/: CMakeLists.txt  GameBoard.cpp  GameBoard.h  GameException.h  GameMaker.cpp  GameMaker.h  GameUtils.cpp  GameUtils.h  IBattleshipGameAlgo.h  PlayerBase.cpp  PlayerBase.h  PlayerFile.cpp  PlayerFile.h  PlayerNaive.cpp  PlayerNaive.h  PlayerSmart.cpp  PlayerSmart.h  PrintHandler.cpp  PrintHandler.h  main.cpp
Development/ex3/: AlgoData.h  CMakeLists.txt  GameBoard.cpp  GameBoard.h  GameBoardData.cpp  GameBoardData.h  GameMaker.cpp  GameMaker.h  GameResult.h  GameUtils.cpp  GameUtils.h  HeatMap.cpp  HeatMap.h  HouseEntry.cpp  HouseEntry.h  IBattleshipGameAlgo.h  Logger.h  MatchGenerator.cpp  MatchGenerator.h  PlayerBase.cpp  PlayerBase.h  PlayerSmart.cpp  PlayerSmart.h  PrintHandler.cpp  PrintHandler.h  TournamentMaker.cpp  TournamentMaker.h  main.cpp
Development/ex4/: Matrix.cpp
Testing/GoodBoards/: board_9.sboard
Testing/MovesList/: movesA.attack-a  movesA.attack-b
Testing/MovesListClean/: movesAclean.attack-a  movesBclean.attack-b
ex1/: ArgParser.cpp  ArgParser.h  GameBoard.cpp  GameBoard.h  GameException.h  GameMaker.cpp  GameMaker.h  IBattleshipGameAlgo.h  ISubmarinesGameAlgo.h  MyGameAlgo.cpp  MyGameAlgo.h  Player.cpp  Player.h  ___MyGameAlgo.cpp  main.cpp
(+1 files in other folders)
